--- a/manifest.json
+++ b/manifest.json
@@ -2,9 +2,9 @@
 "update_url": "https://clients2.google.com/service/update2/crx",
 
     "manifest_version": 2,
-    "name": "In-Tab Values Cracked by Shawn#2000",
-    "version": "2.2",
-    "description": "Equipped with numerous features, In-Tab Values is the best tool to help Roblox traders make 𝗺𝗼𝗿𝗲 profit, 𝗺𝗼𝗿𝗲 efficiently.",
+    "name": "In-Tab Values - Cracked by Shawn#2000",
+    "version": "2.3",
+    "description": "Cracked by Shawn#2000 : discord://discordapp.com/users/580875147624579083",
     "short_name": "ITV",
     "permissions": ["unlimitedStorage", "tabs", "storage", "*://*.roblox.com/*"],
     "content_scripts": [
@@ -47,8 +47,6 @@
         "cancel-subscription-popup.html",
         "data.json",
         "sideValueBox.html"
-
-
     ]
 
 }
